# rust_xml_oxide

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: char_iter.rs  lib.rs  parser.rs  parser2.rs  parser3.rs  parsertidy.rs  sax.rs  tree.rs
src/sax/: circular.rs  dtd.rs  internal.rs  mod.rs  parser.rs
tests/: books_test.rs  test.rs  test_namespace.rs  test_new_parser.rs  test_newer_parser.rs  test_parser_3.rs  test_readme.rs  tree.rs
tests/xml_files/: books.xml  comment-cdata.xml  mini.2.xml  mini.3.xml  mini.4.xml  namespaces.xml  prolog-and-misc.xml  prolog-complex-doctype.xml
