[package]
name = "xml_oxide"
version = "0.4.0-prerelease"
authors = ["Fatih Pense <fatihpense@gmail.com>"]
license = "MIT"

description = "XML SAX parser implementation that parses any well-formed XML defined in the W3C Spec"
repository = "https://github.com/fatihpense/rust_xml_oxide"
documentation = "https://docs.rs/xml_oxide/"

keywords = ["XML", "SAX", "parser"]
categories = ["parsing", "parser-implementations"]

edition = "2021"

[dependencies]
nom = "7"
thiserror = "1.0"
